p2/force-app/main/default/objects/Assessment__c/fields/Confidence_Comments__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Comments__c</fullName>
    <label>Confidence Comments</label>
    <type>TextArea</type>
</CustomField>