p2/force-app/main/default/objects/Assessment__c/fields/Interviewers__c.field-meta.xml
<CustomField>
    <fullName>Interviewers__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interviewers</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Assesments</relationshipName>
    <type>Lookup</type>
</CustomField>