p2/force-app/main/default/objects/Assessment__c/fields/Soft_Skill_Comments__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skill_Comments__c</fullName>
    <label>Soft Skill Comments</label>
    <type>TextArea</type>
</CustomField>