p2/force-app/main/default/objects/Assessment__c/fields/Soft_Skills__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skills__c</fullName>
    <label>Soft Skills</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>