p2/force-app/main/default/objects/Assessment__c/fields/Technical_Skill_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skill_Comments__c</fullName>
    <label>Technical Skill Comments</label>
    <type>TextArea</type>
</CustomField>