p2/force-app/main/default/objects/Assessment__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>